@@ -157,11 +157,158 @@ The application follows DDD principles with clear bounded contexts:
 
 ## Testing Approach
 
-- Unit tests with MockK for mocking
-- Integration tests for API endpoints
-- Kotest for BDD-style testing
-- Spring MockMvc for controller tests
-- Test fixtures in domain test packages
+### Testing Stack & Versions
+- **Spring Boot 3.5.4** with **Kotlin 1.9.25** and **JDK 21**
+- **JUnit 5**: Primary testing framework
+- **MockK 1.13.8**: Kotlin-first mocking library (NOT Mockito)
+- **SpringMockK 4.0.2**: Spring integration for MockK
+- **Spring MockMvc**: Controller/API testing
+- **Kotest 5.7.2**: Available for BDD-style specs
+
+### Critical Configuration for Spring Boot 3.5 + Kotlin
+
+#### 1. AOP and Test Profile Separation
+```kotlin
+// ResponseAspect.kt - MUST be disabled in tests
+@Aspect
+@Component
+@Profile("!test")  // Critical: Prevents ClassCastException in tests
+class ResponseAspect { ... }
+```
+
+#### 2. Test Dependencies (build.gradle.kts)
+```kotlin
+dependencies {
+    // MUST exclude Mockito and use MockK for Kotlin
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude(group = "org.mockito", module = "mockito-core")
+    }
+    testImplementation("io.mockk:mockk:1.13.8")
+    testImplementation("com.ninja-squad:springmockk:4.0.2")
+}
+
+// JDK 21 compatibility settings
+tasks.withType<Test> {
+    useJUnitPlatform()
+    jvmArgs(
+        "-XX:+EnableDynamicAgentLoading",  // Required for JDK 21+
+        "-Djdk.instrument.traceUsage=false"
+    )
+}
+```
+
+#### 3. Test Annotations Pattern
+```kotlin
+@SpringBootTest
+@AutoConfigureMockMvc
+@ActiveProfiles("test")
+@Transactional
+class GetUserSessionsApiTest { ... }
+```
+
+### Test Organization
+Each controller should have multiple focused test files:
+- One test file per API endpoint (max 150 lines for Detekt)
+- Base test class for common setup and fixtures
+- Separate configuration for mocked services
+
+Example structure:
+```
+src/test/kotlin/.../controller/
+├── ChatSessionControllerBaseTest.kt  # Common setup & TestConfig
+├── GetUserSessionsApiTest.kt        # GET /sessions
+├── StartSessionApiTest.kt           # POST /sessions
+└── SendMessageApiTest.kt            # POST /sessions/{id}/messages
+```
+
+### Base Test Class Pattern
+```kotlin
+@TestConfiguration
+class TestConfig {
+    @Bean
+    @Primary
+    fun mockOpenRouterService(): OpenRouterService = mockk()
+}
+
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+@AutoConfigureMockMvc
+@ActiveProfiles("test")
+@Transactional
+abstract class ChatSessionControllerBaseTest(
+    protected val mockMvc: MockMvc,
+    protected val objectMapper: ObjectMapper,
+    // ... other dependencies
+) {
+    @BeforeEach
+    fun setupTestData() { ... }
+    
+    @AfterEach
+    fun cleanupTestData() { ... }
+}
+```
+
+### MockMvc Testing with RsData
+```kotlin
+// Testing with JSON path assertions
+mockMvc.perform(
+    get("/api/sessions")
+        .header("Authorization", "Bearer $authToken")
+)
+    .andExpect(status().isOk)
+    .andExpect(jsonPath("$.resultCode").value("S-1"))
+    .andExpect(jsonPath("$.msg").value("세션 목록 조회 성공"))
+    .andExpect(jsonPath("$.data").isArray)
+```
+
+### Security Configuration in Tests
+```kotlin
+// SecurityConfig must return consistent error format
+.authenticationEntryPoint { _, response, _ ->
+    response.writer.write(
+        objectMapper.writeValueAsString(
+            mapOf(
+                "resultCode" to "F-401",  // Use F- prefix for failures
+                "msg" to "로그인이 필요합니다",
+                "data" to null
+            )
+        )
+    )
+}
+```
+
+### Common Testing Pitfalls & Solutions
+
+| Problem | Solution |
+|---------|----------|
+| ClassCastException: ResponseEntity cannot be cast to RsData | Add `@Profile("!test")` to ResponseAspect |
+| Mockito warnings in JDK 21 | Add JVM args: `-XX:+EnableDynamicAgentLoading` |
+| Wrong resultCode format (401 vs F-401) | Update SecurityConfig error responses |
+| @Transactional on private methods | Remove or make methods public |
+| Kotlin Enum deprecation | Use `.entries` instead of `.values()` |
+
+### Running Tests
+```bash
+# Run all tests
+./gradlew test
+
+# Run specific test class
+./gradlew test --tests "*.GetUserSessionsApiTest"
+
+# Run with detailed output
+./gradlew test --info
+
+# Run tests and generate report
+./gradlew test jacocoTestReport
+```
+
+### Test Best Practices for Spring Boot 3.5
+- **Always use MockK, never Mockito** for Kotlin projects
+- **Disable AOP components** in test profile to avoid proxy issues
+- **Use @Transactional** on test classes, not private methods
+- **Mock external services** with @TestConfiguration beans
+- **Test actual JSON responses** with jsonPath assertions
+- **Clean up test data** in @AfterEach to prevent conflicts
+- **Keep test files under 150 lines** for Detekt compliance
 
 ## Environment Configuration
 
